docs(example): updated pillar example with comment [skip ci]

--- a/pillar.example
+++ b/pillar.example
@@ -38,7 +38,7 @@ kubernetes:
       - python
       - javascript
   operator:
-    wanted: []
+    wanted: []   # disabled until fixed
     sdk:
       wanted:
         - ansible-operator
