--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,18 @@
 ---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+ci:
+  autofix_commit_msg: |
+    ci(pre-commit.ci): apply auto fixes from pre-commit.com hooks
+
+    For more information, see https://pre-commit.ci
+  autofix_prs: true
+  autoupdate_branch: ''
+  autoupdate_commit_msg: |
+    ci(pre-commit.ci): perform `pre-commit` autoupdate
+  autoupdate_schedule: quarterly
+  skip: []
+  submodules: false
 default_stages: [commit]
 repos:
   - repo: https://github.com/dafyddj/commitlint-pre-commit-hook
@@ -18,7 +30,7 @@ repos:
         additional_dependencies: ['@commitlint/config-conventional@8.3.4']
         always_run: true
   - repo: https://github.com/rubocop-hq/rubocop
-    rev: v1.9.1
+    rev: v1.30.1
     hooks:
       - id: rubocop
         name: Check Ruby files with rubocop
@@ -26,14 +38,14 @@ repos:
         always_run: true
         pass_filenames: false
   - repo: https://github.com/shellcheck-py/shellcheck-py
-    rev: v0.7.1.1
+    rev: v0.8.0.4
     hooks:
       - id: shellcheck
         name: Check shell scripts with shellcheck
         files: ^.*\.(sh|bash|ksh)$
         types: []
   - repo: https://github.com/adrienverge/yamllint
-    rev: v1.23.0
+    rev: v1.26.3
     hooks:
       - id: yamllint
         name: Check YAML syntax with yamllint
@@ -41,7 +53,7 @@ repos:
         always_run: true
         pass_filenames: false
   - repo: https://github.com/warpnet/salt-lint
-    rev: v0.3.0
+    rev: v0.8.0
     hooks:
       - id: salt-lint
         name: Check Salt files using salt-lint
@@ -61,7 +73,5 @@ repos:
             (?x)^(
                 docs/CHANGELOG.rst|
                 docs/TOFS_pattern.rst|
-                docs/CONTRIBUTING_DOCS.rst|
-                docs/index.rst|
             )$
         additional_dependencies: [pygments==2.9.0]
